--- a/niv2.css
+++ b/niv2.css
@@ -81,7 +81,7 @@ h1{
 	font-weight: normal;
 	font-family: 'Bungee', cursive;
 	position: fixed;
-	left: 40%;
+	text-align: center;
 }
 #o{
     /*Couleur de fond*/
