--- a/public/lestyle.css
+++ b/public/lestyle.css
@@ -1,13 +1,5 @@
 /****GENERAL****/
-.texte{
-	background-color: #7485f0;
-	position: relative;
-	left: 280px;
-	padding-block-start: 1px;
-	padding-block-end: 1px;
-	
-	
-}
+
 body{
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 25px;
@@ -68,6 +60,9 @@ header{
 	height: 140px;
 }
 footer{
+	border: 4px;
+	border: solid;
+	border-color: white;
 	height: 200px;
 	width: 100%;
 	padding-top: 0px;
@@ -79,6 +74,7 @@ footer{
 	
 	
 }
+
 /****text menu****/
 nav li{
 	list-style-type: none;
@@ -91,6 +87,9 @@ nav ul{
 nav{
 	width: 100%;
 	background-color: rgb(0, 81, 255);
+	border: 4px;
+	border: solid;
+	border-color: white;
 }
 nav a{
 	font-family: 'Anton', sans-serif;
@@ -101,6 +100,8 @@ nav a{
 	text-transform: uppercase;
 	font-size: 15px;
 }
+
+
 /****menu bar****/
 .table{
 	display: table;
@@ -131,12 +132,7 @@ nav a{
 	background-color: #D90611(64, 200, 130, 0,15);
 }
 /****body****/
-.1{
-	width: 100%;
-	min-height: 300px;
-	padding-bottom: 10px;
-	margin-bottom: 10px;
-}
+
 
 
 input{
@@ -147,8 +143,106 @@ label{
 	font-size: 18px;
 }
 
+.ban{
+	width: 100%;
+	height: 7.5em;
+	background: #F2994A;
+	border: 3px solid #FFFCFC;
+	position: relative;
+}
+.texte{
+	text-align: center;
+	font-family: 'Anton', sans-serif;
+	color : white;
+}
+/* alex-perez-544954 */
+.p1{
+	position: relative;
+	width: 100%;
+	height: 40%;
+	
+	background: url(alex-perez-544954.jpg);
+	background-size: 100%;
+	border: 3px solid #FFFFFF;
+	box-sizing: border-box;
+}
+.texte2{
+	text-align: center;
+	font-family: Roboto;
+	font-style: normal;
+	font-weight: normal;
+	line-height: normal;
+	font-size: 1em;
+	color: #FFFFFF;
+}
+.proj{
+	width: 100%;
+	background-color: rgb(0, 81, 255);
+	border: 4px;
+	border: solid;
+	border-color: white;
+}
+.proj2{
+	width: 100%;
+	height: 40%;
+	background-size: 100%;
+	background-position: end;
+	background: url(andrey-grinkevich-361141.jpg);
+	background-size: 100%;
+	border: 4px solid #FFFFFF;
+	box-sizing: border-box;	
+}
+.jsp1{
+	width: 100%;
+	height: 40%;
+	background-size: 100%;
+	background-position: end;
+	background: url(joanna-kosinska-340749.jpg);
+	background-size: 100%;
+	border: 4px solid #FFFFFF;
+	box-sizing: border-box;
+
+}
+.contac{
+	width: 100%;
+	height: 40%;
+
+	background-position: end;
+	background: url(sacha-styles-549093.jpg);
+	border: 4px solid #FFFFFF;
+	background-size: 100%;
+	box-sizing: border-box;
+}
+.gauche1{
+	width: 40%;
+	height: 40%;
+	padding: 2%;
 	
 	
+}
+.droite1{
+	width: 40%;
+	height: 40%;
+	padding: 2%;
+	position: relative;
+	left: 60%;
+	 
+}
+.nmoi1{
+	width: 50%;
+	height: 1000%;
+	background-position: end;
+	background: url(IMG_0819.png);
+	background-size: 100%;
+	background-repeat: no-repeat;
+}
+
+
+
+
+
+
+
 
 	
 	
