--- a/lestyle.css
+++ b/lestyle.css
@@ -2,7 +2,7 @@
 
 body{
 	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 25px;
+	font-size: 1.8em;
 	margin: 0px;
 	padding: 0px;
 	color: rgb(46, 46, 46)
@@ -63,7 +63,7 @@ footer{
 	border: 4px;
 	border: solid;
 	border-color: white;
-	height: 200px;
+	min-height: 200px;
 	width: 100%;
 	padding-top: 0px;
 	text-align: center;
@@ -159,12 +159,24 @@ label{
 .p1{
 	position: relative;
 	width: 100%;
-	height: 40%;
+	min-height: 40%;
 	overflow : hidden;
-	background: url(public/alex-perez-544954.jpg);
+	background: url(alex-perez-544954.jpg);
 	background-size: 100%;
 	border: 3px solid #FFFFFF;
 	box-sizing: border-box;
+}
+#jsp1{
+	position: relative;
+	width: 100%;
+	min-height: 40%;
+	overflow : hidden;
+	background-position: end;
+	background: url(joanna-kosinska-340749.jpg);
+	background-size: 100%;
+	border: 4px solid #FFFFFF;
+	box-sizing: border-box;
+
 }
 .texte2{
 	text-align: center;
@@ -182,41 +194,83 @@ label{
 	border: solid;
 	border-color: white;
 }
-.proj2{
+.supere{
+	font-family: 'Bungee', cursive;
+}
+#proj2{
+	text-align: center;
 	width: 100%;
 	min-height: 40%;
-	background-size: 100%;
 	background-position: end;
-	background: url(public/andrey-grinkevich-361141.jpg);
+	overflow : hidden;
+	background: url(andrey-grinkevich-361141.jpg);
 	background-size: 100%;
 	border: 4px solid #FFFFFF;
 	box-sizing: border-box;	
 	
 }
-.jsp1{
-	width: 100%;
-	min-height: 40%;
-	background-size: 100%;
-	background-position: end;
-	background: url(public/joanna-kosinska-340749.jpg);
-	background-size: 100%;
-	border: 4px solid #FFFFFF;
-	box-sizing: border-box;
 
+.imagess{
+	background-color: rgba(0, 0, 0, 0.5);
+	border-radius: 3px 3px 5px;
+	width: 100%;
 }
-.contac{
+.image4{
+	width: 70%;
+	
+}
+form{
+	color:white;
+}
+input{
+	position: absolute;
+	width: 80%;
+	height: 5%;
+	left: 8%;
+	border : solid;
+	border: 0.2% ;
+	border-color: green;
+	background-color: gainsboro
+	border-radius: 3px 3px 5px;
+}
+textarea{
+	width: 80%;
+	height: 10%;
+	left: 8%;
+	border : solid;
+	border: 0.2% ;
+	border-color: green;
+	background-color: gainsboro
+	border-radius: 3px 3px 5px;
+}
+label{
+	margin-left: 1%;
+}
+#submit{
+	width: 20%;
+	margin-left: 5%;
+}
+
+#contac{
 	width: 100%;
 	min-height: 40%;
-
 	background-position: end;
-	background: url(public/sacha-styles-549093.jpg);
+	background: url(sacha-styles-549093.jpg);
 	border: 4px solid #FFFFFF;
 	background-size: 100%;
 	box-sizing: border-box;
 }
 .gauche1{
 	width: 40%;
-	height: 78%;
+	min-height: 10%;
+	padding: 2%;
+	float:left;
+	box-sizing: border-box;
+	
+}
+.gauche3{
+	width: 40%;
+	min-height: 10%;
 	padding: 2%;
 	float:left;
 	box-sizing: border-box;
@@ -225,7 +279,25 @@ label{
 
 .droite1{
 	width: 40%;
-	height: 100%;
+	min-height: 10%;
+	padding: 2%;
+	position: relative;
+	float:right;
+	box-sizing: border-box;
+	 
+}
+.droite2{
+	width: 40%;
+	min-height: 10%;
+	padding: 2%;
+	position: relative;
+	float:right;
+	box-sizing: border-box;
+	 
+}
+.droite3{
+	width: 40%;
+	min-height: 10%;
 	padding: 2%;
 	position: relative;
 	float:right;
@@ -239,6 +311,52 @@ label{
 	width: 30%
 	height: 100%;
 }
+.gauche2{
+	width: 40%;
+	min-height: 10%;
+	padding: 2%;
+	float:left;
+	box-sizing: border-box;
+	
+}
+button{
+	display: inline-block;
+	font-weight: 400;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	border: 1px solid transparent;
+    border-top-color: transparent;
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+    border-left-color: transparent;
+	color: #fff;
+	color: #fff;
+	background-color: #007bff;
+	border-color: #007bff;
+	padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+button:hover{
+	background-color: #3e1eb4;
+	border-color: #2d0992;
+}
+.bando{
+	background-color: rgba(0, 0, 0, 0.5);
+	border-radius: 3px 3px 5px;
+}
+.bando2{
+	background-color: rgba(0, 0, 0, 0.5);
+	border-radius: 3px 3px 5px;
+}
+
 
 
 
