--- a/lestyle.css
+++ b/lestyle.css
@@ -174,7 +174,7 @@ label{
 	background-position: end;
 	background: url(joanna-kosinska-340749.jpg);
 	background-size: 100%;
-	border: 4px solid #FFFFFF;
+	border: 3px solid #FFFFFF;
 	box-sizing: border-box;
 
 }
@@ -192,7 +192,7 @@ label{
 	background-color: rgb(0, 81, 255);
 	border: 4px;
 	border: solid;
-	border-color: white;
+	border-color: #ffffff;
 }
 .supere{
 	font-family: 'Bungee', cursive;
@@ -205,7 +205,7 @@ label{
 	overflow : hidden;
 	background: url(andrey-grinkevich-361141.jpg);
 	background-size: 100%;
-	border: 4px solid #FFFFFF;
+	border: 3px solid #FFFFFF;
 	box-sizing: border-box;	
 	
 }
@@ -256,7 +256,7 @@ label{
 	min-height: 40%;
 	background-position: end;
 	background: url(sacha-styles-549093.jpg);
-	border: 4px solid #FFFFFF;
+	border: 3px solid #FFFFFF;
 	background-size: 100%;
 	box-sizing: border-box;
 }
