--- a/lestyle2.css
+++ b/lestyle2.css
@@ -8,8 +8,8 @@
 	position: absolute;
 	bottom:16px;
 	z-index: -10;
-	width: 90%;
-	height: 40%;
+	width: ;
+	height: ;
 	content: " ";
 	background: rgba(0,0,0,0.1);
 	border-radius: 50%;
