--- a/lestyle.css
+++ b/lestyle.css
@@ -1,3 +1,4 @@
+
 /****GENERAL****/
 
 body{
@@ -35,6 +36,7 @@ h2{
 	padding-top: 30px;
 	padding-block-end: 30px;
 }
+
 .btexteras{
 	
 	text-align: left;
@@ -102,103 +104,180 @@ nav a{
 }
 
 
+/****menu bar****/
+.table{
+	display: table;
+	margin: 0 auto;
+}
+.acc:hover{
+	border-top: 5px solid yellow;
+	background-color: RGBa(64, 200, 130, 0;15);
+}
+.exp:hover{
+	border-top: 5px solid yellow;
+	background-color: RGBa(64, 200, 130, 0;15);
+}
+.loi:hover{
+	border-top: 5px solid yellow;
+	background-color: RGBa(64, 200, 130, 0;15);
+}
+.cont:hover{
+	border-top: 5px solid yellow;
+	background-color: RGBe(64, 200, 130, 0,15);
+}
+.lien:hover{
+	border-top: 5px solid yellow;
+	background-color: #D90611(64, 200, 130, 0,15);
+}
+.super:hover{
+	border-top: 5px solid yellow;
+	background-color: #D90611(64, 200, 130, 0,15);
+}
+/****body****/
 
-.gauche1{
-	width: 40%;
-	min-height: 10%;
-	padding: 2%;
-	float:left;
-	box-sizing: border-box;
-	
+
+
+input{
+	width: 150px;
+	background-color: #E3E2E2;
 }
-.gauche3{
-	width: 40%;
-	min-height: 10%;
-	padding: 2%;
-	float:left;
-	box-sizing: border-box;
-	
+label{
+	font-size: 18px;
 }
 
-.droite1{
-	width: 40%;
-	min-height: 10%;
-	padding: 2%;
+.ban{
+	width: 100%;
+	height: 7.5em;
+	background: #F2994A;
+	border: 3px solid #FFFCFC;
 	position: relative;
-	float:right;
-	box-sizing: border-box;
-	 
 }
-.droite2{
-	width: 40%;
-	min-height: 10%;
-	padding: 2%;
-	position: relative;
-	float:right;
-	box-sizing: border-box;
-	 
-}
-.droite3{
-	width: 40%;
-	min-height: 10%;
-	padding: 2%;
-	position: relative;
-	float:right;
-	box-sizing: border-box;
-	 
-}
-.image{
-	background-size: 100%;
-	background-position: end;
-	background-image: url(public/IMG_0819.png);
-	width: 30%
-	height: 100%;
-}
-.gauche2{
-	width: 40%;
-	min-height: 10%;
-	padding: 2%;
-	float:left;
-	box-sizing: border-box;
-	
-}
-button{
-	display: inline-block;
-	font-weight: 400;
+.texte{
 	text-align: center;
-	white-space: nowrap;
-	vertical-align: middle;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	border: 1px solid transparent;
-    border-top-color: transparent;
-    border-right-color: transparent;
-    border-bottom-color: transparent;
-    border-left-color: transparent;
-	color: #fff;
-	color: #fff;
-	background-color: #007bff;
-	border-color: #007bff;
-	padding: .375rem .75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    border-radius: .25rem;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+	font-family: 'Anton', sans-serif;
+	color : white;
 }
-button:hover{
-	background-color: #3e1eb4;
-	border-color: #2d0992;
+.texte4{
+	text-align: center;
+	font-family: 'Anton', sans-serif;
+	color : rgb(49, 49, 49);
 }
-.bando{
+
+.soustexte{
+	text-align: center;
+	font-family: 'Anton', sans-serif;
+	color : white;
+	font-size: 0.8em;
+}
+/* alex-perez-544954 */
+.p1{
+	position: relative;
+	width: 100%;
+	min-height: 40%;
+	overflow : hidden;
+	background: url(alex-perez-5449541.jpg);
+	background-size: 100%;
+	border: 3px solid #FFFFFF;
+	box-sizing: border-box;
+}
+#jsp1{
+	position: relative;
+	width: 100%;
+	min-height: 40%;
+	overflow : hidden;
+	background-position: end;
+	background: url(18880246_1547592331978684_2940538478792470787_o1.jpg);
+	background-size: 100%;
+	border: 3px solid #FFFFFF;
+	box-sizing: border-box;
+
+}
+#slideshow {
+	position: relative;
+	width: 640px;
+	height: 310px;
+	padding: 15px;
+	margin: 0 auto 2em;
+	border: 1px solid #ddd;
+	background: #FFF;
+	/* CSS3 effects */
+	background: linear-gradient(#FFF, #FFF 20%, #EEE 80%, #DDD);
+	border-radius: 2px 2px 2px 2px;
+	box-shadow: 0 0 3px rgba(0,0,0, 0.2);
+}
+
+.proj3{
+	position: relative;
+	width: 100%;
+	min-height: 40%;
+	overflow : hidden;
+	background: url(thought-catalog-214785-unsplash1.jpg);
+	background-size: 100%;
+	border: 3px solid #FFFFFF;
+	box-sizing: border-box;
+	background-position-y: 50%;
+}
+.texte2{
+	text-align: center;
+	font-family: Roboto;
+	font-style: normal;
+	font-weight: normal;
+	line-height: normal;
+	font-size: 1em;
+	color: #FFFFFF;
+}
+.proj{
+	width: 100%;
+	background-color: rgb(0, 81, 255);
+	border: 4px;
+	border: solid;
+	border-color: #ffffff;
+}
+.supere{
+	font-family: 'Bungee', cursive;
+}
+#proj2{
+	text-align: center;
+	width: 100%;
+	min-height: 40%;
+	background-position: end;
+	overflow : hidden;
+	background: url(andrey-grinkevich-3611411.jpg);
+	background-size: 100%;
+	border: 3px solid #FFFFFF;
+	box-sizing: border-box;	
+	
+}
+.sousbando{
+	width: 100%;
+	background-color: rgb(31, 138, 17);
+	border: 4px;
+	border: solid;
+	border-color: #ffffff;
+}
+
+.imagess{
 	background-color: rgba(0, 0, 0, 0.5);
 	border-radius: 3px 3px 5px;
+	width: 100%;
 }
-.bando2{
-	background-color: rgba(0, 0, 0, 0.5);
-	border-radius: 3px 3px 5px;
+.image4{
+	width: 70%;
+	
 }
+form{
+	color:white;
+}
+.dropdown-item{
+	color:#464646;
+	font-family: anton;
+	font-style: bold;
+	font-size: 0.6em;
+	padding: 2% 0px;
+	
+}
+
+
 
 
 
