--- a/forum/style3.css
+++ b/forum/style3.css
@@ -1,38 +1,73 @@
 #lienhaut {
     text-decoration: none;
 }
+
 #titrehaut {
-    margin:0;
+    margin: 0;
     padding: 0;
     text-decoration: none;
     font-family: 'Paytone One', sans-serif;
     Text-Align: Center;
-    color:rgb(255, 255, 255);
-    font-size: 1.5em;  
+    color: rgb(255, 255, 255);
+    font-size: 36px;
+    margin-block-end: -12px
 }
-.tabhaut{
-    margin:0;
+
+.logo {
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 210px;
+    margin-left: -256.5px;
+    text-align: center;
+}
+
+.textetabbas {
+    font-family: 'Oswald', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
+    font-size: 28px;
+    text-align: left;
+    margin-left: 15px;
+    color: rgb(255, 255, 255);
+    display: inline-block;
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+}
+
+.tabhaut {
+    margin: 0;
     padding: 0;
     width: 100%;
     height: 15%;
     background-color: black;
-
 }
 
-.tabbas{
+.tabbas {
+    margin: 0;
+    padding: 0;
     width: 100%;
-    height: 15%;
     background-color: black;
 }
-.fondtab{
+
+.fondtab {
     background-image: url(fondtab.png);
     width: 100%;
     height: 400px;
     background-position-y: 50%;
-} 
-html,body {
-    margin:0;
+    margin: 0;
+    padding: 0;
+}
+
+nav {
+    margin: 0;
+    padding: 0;
+}
+
+html,
+body {
+    margin: 0;
     padding: 0;
     height: 720px;
 }
-
