--- a/forum/style3.css
+++ b/forum/style3.css
@@ -9,31 +9,71 @@
     font-family: 'Paytone One', sans-serif;
     Text-Align: Center;
     color: rgb(255, 255, 255);
-    font-size: 36px;
+    font-size: 2.5em;
     margin-block-end: -12px
 }
 
 .logo {
-    width: auto;
+    width: 400px;
     height: auto;
     position: absolute;
     top: 210px;
-    margin-left: -256.5px;
+    margin-left: -200px;
     text-align: center;
 }
-
-.textetabbas {
+@media only screen and (max-width:1000px) {
+    .logo {
+        width: 300px;
+        margin-left: -150px;
+        top: 300px;
+    }
+}
+@media only screen and (max-width:1200px) {
+    .logo {
+        width: 350px;
+        margin-left: -175px;
+        top: 300px;
+    }
+}
+@media only screen and (max-width:900px) {
+    .logo {
+        width: 0px;
+        margin-left: -150px;
+        top: 300px;
+    }
+}
+@media only screen and (min-width:2000px) {
+    .logo {
+        width: 600px;
+        margin-left: -300px;
+        top: 130px;
+    }
+}
+.textetabbasgauche {
     font-family: 'Oswald', sans-serif;
     font-style: normal;
     font-weight: normal;
     line-height: normal;
-    font-size: 28px;
+    font-size: 2em;
     text-align: left;
     margin-left: 15px;
     color: rgb(255, 255, 255);
-    display: inline-block;
     margin-block-start: 0px;
     margin-block-end: 0px;
+    display: inline-block;
+}
+.textetabbasdroite {
+    text-align: right;
+    font-family: 'Oswald', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
+    font-size: 2em;
+    margin-right: 15px;
+    color: rgb(255, 255, 255);
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+    display: inline-block;
 }
 
 .tabhaut {
@@ -45,6 +85,7 @@
 }
 
 .tabbas {
+    text-transform: uppercase;
     margin: 0;
     padding: 0;
     width: 100%;
