--- a/lestyle.css
+++ b/lestyle.css
@@ -289,6 +289,19 @@ form{
 	box-sizing: border-box;	
 	background-position-y: 100%
 }
+#proj5{
+	text-align: center;
+	width: 100%;
+	min-height: 40%;
+	background-position: end;
+	overflow : hidden;
+	background-color:rgb(4, 222, 233);
+	background-size: 100%;
+	border: 3px solid #FFFFFF;
+	box-sizing: border-box;	
+	background-position-y: 100%;
+	background-position-y: 50%;
+}
 
 
 
